# Umbra

./: AGENTS.md  Cargo.toml  README.md  microkernel.md  next.md  push  run
.cargo/: config.toml
SerV/: Cargo.toml
SerV/src/: main.rs
builder/: Cargo.toml
builder/src/: main.rs
fb-server/: Cargo.toml
fb-server/src/: main.rs
kernel/: Cargo.toml
kernel-arch/: Cargo.toml
kernel-arch/src/: interrupts.rs  lib.rs  memory.rs  pci.rs  syscall.rs  userspace.rs
kernel-core/: Cargo.toml
kernel-core/src/: allocator.rs  elf_loader.rs  ipc.rs  lib.rs  process.rs  syscall.rs
kernel-core/src/task/: executor.rs
kernel-hal/: Cargo.toml
kernel-hal/src/: lib.rs
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  cmos.rs  elf_loader.rs  framebuffer.rs  gdt.rs  interrupts.rs  ipc.rs  lib.rs  main.rs  memory.rs  pci.rs  process.rs  serial.rs  syscall.rs  tar.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
keyboard-server/: Cargo.toml
keyboard-server/src/: main.rs
pci-server/: Cargo.toml
pci-server/src/: main.rs
power-server/: Cargo.toml
power-server/src/: main.rs
rtc-server/: Cargo.toml
rtc-server/src/: main.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/task/: keyboard.rs  mod.rs
tests/: basic_boot.rs  should_panic.rs
tick-server/: Cargo.toml
tick-server/.cargo/: config.toml
tick-server/src/: main.rs
userspace/: Cargo.toml  linker.ld
userspace/.cargo/: config.toml
userspace/libumbra/: Cargo.toml
userspace/libumbra/src/: cap.rs  ipc.rs  lib.rs  process.rs
userspace/src/: main.rs
