[package]
name = "umbra"
version = "0.0.1"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "umbra"
test = true
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.6.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.test]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false
