[workspace]
members = [
    "kernel",
    "userspace",
    "userspace/libumbra",
    "builder",
    "keyboard-server",
    "tick-server",
    "SerV",
    "fb-server",
    "rtc-server",
    "pci-server",
    "power-server", "kernel-hal", "kernel-arch", "kernel-core",
]
default-members = ["builder"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"

[profile.dev.package.userspace]
strip = "symbols"
opt-level = "s"

[profile.dev.package.SerV]
strip = "symbols"
opt-level = "s"

[profile.dev.package.keyboard-server]
strip = "symbols"
opt-level = "s"

[profile.dev.package.tick-server]
strip = "symbols"
opt-level = "s"

[profile.dev.package.rtc-server]
strip = "symbols"
opt-level = "s"

[profile.dev.package.pci-server]
strip = "symbols"
opt-level = "s"

[profile.dev.package.power-server]
strip = "symbols"
opt-level = "s"

[profile.dev.package.fb-server]
strip = "symbols"
opt-level = "s"
