[package]
name = "kernel-arch"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.6.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
acpi = "4.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4"
default-features = false
