[package]
name = "kernel-core"
version = "0.1.0"
edition = "2024"

[dependencies]
xmas-elf = "0.9"
linked_list_allocator = "0.9.0"
spin = "0.5.2"
x86_64 = "0.14.2"
bootloader_api = "0.11"

kernel-arch = { path = "../kernel-arch" }

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]
