[package]
name = "umbra"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "umbra"
test = true
bench = false

[dependencies]
bootloader_api = "0.11"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.6.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
acpi = "4.1"
xmas-elf = "0.9"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
